<resources>
    <string name="app_name">ServiceDelAutomotor</string>
    <string name="botón_volver">Volver</string>

    //sppiner chapa
    <string-array name="descripcionChapa">
        <item>Ver más</item>
        <item>site y treinta y estando en la cama,
            pero no se puede llevo las niños a las
            9</item>

    </string-array>

    //siniestros
    <string name="siniestros_title">Solicitando grúa</string>
    <string name="btn_ubicacion">Activar ubicación</string>
    <string name="ubicacion">Su ubicación es:</string>
    <string name="ubicacion_cliente">Av.Corrientes 300</string>
    <string name="demora">Demora estimada:</string>
    <string name="description_map">Descripción del mapa para la accesibilidad</string>

    //confirma-ayuda
    <string name="ayudaTitulo">Nuestro profesional esta en camino!</string>
    <string name="tiempo">30:00 min aprox</string>
    <string name="botón_confirmar">Confirmar</string>
    <string name="select_siniestro_title">Siniestros</string>

    //select-siniestro
    <string name="opcion_policia">Policía</string>
    <string name="botón_policia">911</string>
    <string name="opcion_ambulancia">Ambulancia</string>
    <string name="opcion_bomberos">Bomberos</string>
    <string name="opcion_defensa">Defensa civíl</string>

    <!--string home-->
    <string name="btnServicio">Servicios</string>
    <string name="btnMecanico">Mécanico</string>
    <string name="btnGrua">Grúa</string>
    <string name="btnTurnos">Mis Turnos</string>
    <string name="btnSiniestros">Siniestros</string>
    <string name="btnPerfil">Mi perfil</string>
    <string name="btnPresupuesto">Cotización</string>
    <string name="btnMiAuto">Mi Auto</string>
    <string name="btnContacto">Contácto</string>
    <!--Fin String home-->

    <!--string presentacion-->
    <string name="text_service">SERVICE</string>
    <string name="text_del">DEL</string>
    <string name="text_automotor">AUTOMOTOR</string>
    <string name="text_cuenta">No tienes una cuenta?</string>
    <string name="text_register">Regístrate</string>
    <string name="btn_login">INICIAR SESIÓN</string>
    <string name="text_recuperar">Recuperar</string>
    <!--Fin string presentacion-->

    <!--string login-->
    <string name="text_login">Iniciar Sesión</string>
    <string name="text_hint_user">Email</string>
    <string name="text_forget">Olvidó su contraseña?</string>
    <string name="text_description_btnLogin">Botón para iniciar sesión en la aplicación</string>
    <string name="text_hint_password">Contraseña</string>
    <!--Fin string login-->

    <!--string register-->
    <string name="btn_register">REGISTRARSE</string>
    <string name="text_inicia_sesion">Inicia sesión</string>
    <string name="text_registrarse">Registrarse</string>
    <string name="text_hint_nameUser">Nombre de Usuario</string>
    <string name="text_hint_correo">Correo</string>
    <string name="text_hint_confirmPassword">Confirmar contraseña</string>
    <string name="text_cuenta2">Ya tienes cuenta?</string>
    <!--Fin string register-->

    <!--String recuperar contraseña-->
    <string name="text_recuperar_contraseña">Recuperá tu contraseña</string>
    <string name="text_olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="text_ingresar_correo"> ¡No te preocupes! Escribí el mail de tu cuenta y recibí instrucciones para recuperarla.</string>
    <string name="text_hintEmail">Email</string>
    <string name="btn_recuperarContraseña">Recuperar Contraseña</string>
    <string name="text_description_btnRecuperarContraseña">Botón para recuperar contraseña</string>
    <!--Fin string recuperar contraseña-->

    <!--String recuperar contraseña-->
    <string name="text_confirm_contraseña">Confirma tu contraseña</string>
    <string name="text_ingresar_contraseña"> Ingrese su nueva contraseña</string>
    <string name="btn_confir_contraseña">Confirmar Contraseña</string>
    <string name="text_contraseña_nueva">Contraseña nueva</string>

    <!--string contacto-->
    <string name="text_contacto">Contáctanos</string>
    <string name="text_redes_contacto">Siguenos en nuestras redes sociales</string>
    <string name="text_logo_facebook">Logo de Facebook</string>
    <string name="text_logo_instagram">Logo de Instagram</string>
    <string name="text_mensaje">Mensaje</string>
    <string name="btn_enviar">Enviar</string>
    <string name="text_hint_IngreseNombre">Ingrese su nombre</string>
    <string name="text_hint_IngreseCorreo">Ingrese su correo</string>
    <string name="text_hint_IngreseMensaje">Ingrese su mensaje</string>
    <!--Fin string contacto-->

    <!--string mecanico-->
    //activity mecanico
    <string name="titulo">Guardia Mécanica</string>

    <string name="descripcion1">Nuestro taller cuenta con  profesionales altamente capacitados
para cualquier tipo de vehículo.</string>

    <string name="descripcion2">Si necesitas un diagnostico preciso solicita un mécanico y uno de nuestros porfesionales
        se dirigira a tu domicilio</string>

    <string name="descripcion3">La consulta a tu domicilio tiene un costo fijo de $20.000 que se abonan en el momento.
El costo de la reparación depende del daño.</string>

    //activity formu mecanico
    <string name="titulo2">Ingrese sus datos personales</string>

    <string name="inp1">Nombre</string>
    <string name="inp2">Apellido</string>
    <string name="inp3">N° Celular</string>
    <string name="inp4">Dirección</string>
    <string name="inp5">Modelo de Vehículo</string>
    <string name="inp6">Servicio : Mecánico de guardia</string>
    <string name="inp7">Consulta: $20,000</string>
    <string name="inp8">Día</string>

    <string name="descripcion4">Recorda que la visita tiene un costo fijo,
la reparación del auto depende del daño.</string>
    <string name="cancelar">Cancelar</string>

    <!--fin string mécanico-->

    //activity información personal
    <string name="tituloip1">Información Personal</string>
    <string name="tituloip2">Información Del Vehículo</string>
    <string name="tituloip3">Información Personal</string>
    <string name="inpip1">Nombre</string>
    <string name="inpip2">Apellido</string>
    <string name="inpip3">N° Celular</string>
    <string name="inpip4">Provincia</string>
    <string name="inpip5">Calle</string>
    <string name="inpip6">Altura</string>
    <string name="inpip7">Localidad</string>
    <string name="inpip8">Marca</string>
    <string name="inpip9">Modelo</string>
    <string name="inpip10">Patente</string>
    <string name="cp">Codigo Postal</string>
    <string name="tipo">Tipo vehiculo</string>
    <string name="btn_ipeditar">Editar</string>
    <string name="btn_ipguardar">Perfil</string>
    <string name="btn_ipCancelar">Cancelar</string>


    <!--fin string información personal-->

    //activity información auto
    <string name="tituloia1">Información de mi auto</string>
    <string name="inpia1">Marca</string>
    <string name="inpia2">Modelo</string>
    <string name="inpia3">Patente</string>
    <string name="inpia4">Kilometraje</string>
    <string name="btn_iaeditar">Editar</string>
    <string name="btn_iaguardar">Guardar</string>
    <string name="btn_iacancelar">Cancelar</string>

    <!--fin string información auto-->


    //listado-usuarios
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="btnVer">Ver</string>
    <string name="btnAgregar">Agregar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="detalleUsuarioTitulo">Información Personal</string>
    <string name="btnPrueba">PruebaRepo</string>

    //detalle-usuario

    <!--solicitar turno-->
    <string name="seleccion_fecha_hora">Seleccione fecha y hora del turno</string>
    <string name="servicio_turno">Servicios:</string>
    <string name="direccion_turno">Dirección:</string>
    <string name="vehiculo_turno">Tipo de vehículo:</string>
    <string name="fecha_turno">Fecha:</string>
    <string name="precio_turno">Precio:</string>
    <string name="elegir_horario">Elegir Horario</string>
    <string name="hora_Turno">Hora:</string>
    <string name="btn_confirmar_turno">Confirmar</string>
    <string name="btn_cancelar_turno">Cancelar</string>

    <!--confirmacion turno-->
    <string name="confirmar_turno1">Tu turno ha sido generado exitosamente!</string>
    <string name="confirmar_turno2">Si desea descargar o enviar a tu correo
    el comprobante de pago haz click</string>
    <string name="confirmar_turno3">Las cancelaciones se realizarán 24 horas
    antes de la fecha del turno</string>
    <string name="confirmar_turno4">AQUÍ</string>
    <string name="confirmar_turno5">CANCELAR</string>
    <string name="btn_atras_turno">Volver</string>

    <!--presupuesto-->
    <string name="presupuesto_texto00">Presupuesto</string>
    <string name="presupuesto_texto1">Seleccione los servicios que desea realizar a su vehículo. Al finalizar se visualizará el presupuesto.</string>
    <string name="presupuesto_texto2">Especifique su tipo de vehículo:</string>
    <string name="presupuesto_texto3">Auto</string>
    <string name="presupuesto_texto4">Lavadero</string>
    <string name="presupuesto_texto5">Cambio de aceite</string>
    <string name="presupuesto_texto6">Tapizado</string>
    <string name="presupuesto_texto7">Neumáticos</string>
    <string name="presupuesto_texto8">Costo total de los servicios seleccionados</string>
    <string name="presupuesto_texto9">$0.00</string>
    <string name="btn_presupuesto_b1">Confirmar</string>
    <string name="btn_presupuesto_b2">Cancelar</string>


    <!--mis turnos-->
    <string name="misTurnos">Mis Turnos</string>
    <string name="turno">Turno : 25/09/23</string>
    <string name="tipoServicio">Servicio : Tapizado</string>
    <string name="sucursal">Sucursal : Centro</string>
    <string name="cancelarTurno"><u>Cancelar</u></string>
    <!--mis turnos-->

    //Servicios
    <string name="title_servicios">Servicios</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back_btn">back_btn</string>
    <string name="car">TODO</string>
    <string name="lavadero">LAVADERO</string>
    <string name="Lavadero">Lavadero</string>
    <string name="Chapa_y_pintura">Chapa y Pintura</string>
    <string name="Neumaticos">Neumáticos</string>
    <string name="Cambio_de_Aceite">Cambio de Aceite</string>
    <string name="Solicitar_turno">Solicitar Turno</string>
    //servicios

    //QuienesSomos
    <string name="txtqs01">
    Quienes Somos
    </string>
    <string name="txtqs02">
Somos una solución que combina talleres mecánicos y servicios en una sola plataforma, un taller cuyo único objetivo y compromiso es el de realizar un buen servicio de última generación, fusionándonos con la tecnología para generar el mayor grado de confort y soluciones a nuestros clientes.
</string>
    <string name="txtqs03">
    Nuestra preparación, conocimiento del mercado, y experiencia técnica, nos avala para entender las necesidades de nuestros clientes en todos nuestros servicios.
</string>

    //menu_home
    <string name="m_home">Home</string>
    <string name="m_notificacion">Notificación</string>
    <string name="m_setting">Configuración</string>
    <string name="m_salir">Salir</string>

    //Ver video
    <string name="btn_video">Ver Video</string>

</resources>