<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionPersonal">

    <EditText
        android:id="@+id/editText13"
        android:layout_width="358dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:height="48dp"
        android:hint="@string/inpip3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:height="48dp"
        android:hint="@string/inpip2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="186dp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="180dp"
        android:layout_height="38dp"
        android:height="48dp"
        android:hint="@string/inpip1"
        app:layout_constraintEnd_toStartOf="@+id/editText12"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="186dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:height="48dp"
        android:hint="@string/inpip4"
        app:layout_constraintEnd_toStartOf="@+id/editText7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText13" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:height="48dp"
        android:hint="@string/inpip5"
        app:layout_constraintEnd_toStartOf="@+id/editText6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText13" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:height="48dp"
        android:hint="@string/inpip7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:height="48dp"
        android:hint="@string/inpip6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText7"
        app:layout_constraintTop_toBottomOf="@+id/editText13" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:height="48dp"
        android:hint="@string/inpip10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="327dp"
        android:layout_height="37dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:text="@string/tituloip2"
        android:textColor="@color/negro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="358dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:height="48dp"
        android:hint="@string/inpip8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:height="48dp"
        android:hint="@string/inpip9"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="327dp"
        android:layout_height="37dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:text="@string/tituloip3"
        android:textColor="@color/negro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="327dp"
        android:layout_height="37dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:text="@string/tituloip1"
        android:textColor="@color/negro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="89dp"
        android:layout_height="105dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ellipse" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btn_ipeditar"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btn_ipCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btn_ipguardar"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

</androidx.constraintlayout.widget.ConstraintLayout>