<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormMecanico">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="404dp"
        android:layout_height="555dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="155dp"
        android:background="@drawable/background_dorado"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="327dp"
            android:layout_height="37dp"
            android:text="@string/titulo2"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/inpNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:height="48dp"
            android:background="@drawable/background_btn"
            android:hint="@string/inp1"
            android:padding="5dp" />

        <EditText
            android:id="@+id/inpApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:height="48dp"
            android:background="@drawable/background_btn"
            android:hint="@string/inp2"
            android:padding="5dp" />

        <EditText
            android:id="@+id/inpCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:height="48dp"
            android:background="@drawable/background_btn"
            android:hint="@string/inp3"
            android:padding="5dp" />

        <EditText
            android:id="@+id/inpDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:height="48dp"
            android:background="@drawable/background_btn"
            android:hint="@string/inp4"
            android:padding="5dp" />

        <EditText
            android:id="@+id/inpModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:height="48dp"
            android:background="@drawable/background_btn"
            android:hint="@string/inp5"
            android:padding="5dp" />

        <EditText
            android:id="@+id/inpDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:height="48dp"
            android:background="@drawable/background_btn"
            android:hint="@string/inp8"
            android:padding="5dp" />


        <TextView
            android:id="@+id/textServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/inp6"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textCosto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/inp7"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion4"
            android:textSize="20sp" />
    </LinearLayout>


    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="666dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/background_dorado"
        android:onClick="botonConfirmar"
        android:text="@string/botón_confirmar"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/barraMenu"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_dorado"
        android:onClick="botonCancelar"
        android:text="@string/cancelar"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonConfirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonConfirmar" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/barraMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/principal"
        app:itemIconTint="@color/blanco"
        app:itemTextColor="@color/blanco"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfirmar"
        app:menu="@menu/menu_home" />


</androidx.constraintlayout.widget.ConstraintLayout>