<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformacionAuto">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="327dp"
        android:layout_height="80dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="42dp"
        android:text="@string/tituloia1"
        android:textColor="@color/negro"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/estilo_bordes"
        android:backgroundTint="#F6BB46"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148">

    </LinearLayout>

    <EditText
        android:id="@+id/editText16"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:height="48dp"
        android:hint="@string/inpia2"
        app:layout_constraintEnd_toStartOf="@+id/editText24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText18" />

    <EditText
        android:id="@+id/editText24"
        android:layout_width="174dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:height="48dp"
        android:hint="@string/inpia3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText16"
        app:layout_constraintTop_toBottomOf="@+id/editText18" />

    <EditText
        android:id="@+id/editText18"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:height="48dp"
        android:hint="@string/inpia1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        tools:layout_editor_absoluteY="102dp" />

    <EditText
        android:id="@+id/editText17"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:height="48dp"
        android:hint="@string/inpia4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="23dp" />

    <Button
        android:id="@+id/btn_atras_turno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_iaeditar"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_iaguardar"
        app:layout_constraintEnd_toStartOf="@+id/btn_presupuesto_b1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_atras_turno"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/btn_presupuesto_b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_iacancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>