<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MecanicoActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="387dp"
        android:layout_height="501dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="187dp"
        android:background="@drawable/background_dorado"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/descripcion1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/descripcion2"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:src="@mipmap/mechanic" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/descripcion3"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_dorado"
        android:onClick="botonConfirmar"
        android:text="@string/botón_confirmar"
        android:textColor="@color/blanco"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:textSize="20sp" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/background_dorado"
        android:onClick="botonCancelar"
        android:text="@string/cancelar"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="MissingConstraints"
        tools:textSize="20sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/barraMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/principal"
        app:itemIconTint="@color/blanco"
        app:itemTextColor="@color/blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_home" />
</androidx.constraintlayout.widget.ConstraintLayout>